[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! Iam Rohith.<br>
-            Fan of Powerstar PawanKalyan
+            <p>Hi! Iam Rohith.</p>
+            <p>Fan of PowerStar PawanKalyan</p>
+
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
